[lib]
name = "soup"

[package]
#build = "build.rs"
description = "Soup2 crate for Rust"
license = "MIT"
name = "soup2"
version = "0.14.0"
edition = "2018"

[dependencies]
libc = "0.2"
bitflags = "1.2"
once_cell = "1.9"
glib = "0.14"
glib-sys = "0.14"
gobject-sys = "0.14"
gio = "0.14"
gio-sys	= "0.14"
futures-util = "0.3"
fragile = "1.0"

[dependencies.ffi]
package = "soup2-sys"
path = "sys"
version = "^0.14"

[features]
default = ["v2_70"]
dox = []
v2_24 = []
v2_26 = ["v2_24", "ffi/v2_26"]
v2_26_3 = ["v2_26", "ffi/v2_26_3"]
v2_28 = ["v2_26_3", "ffi/v2_28"]
v2_30 = ["v2_28", "ffi/v2_30"]
v2_32 = ["v2_30", "ffi/v2_32"]
v2_34 = ["v2_32", "ffi/v2_34"]
v2_36 = ["v2_34", "ffi/v2_36"]
v2_38 = ["v2_36", "ffi/v2_38"]
v2_40 = ["v2_38", "ffi/v2_40"]
v2_42 = ["v2_40", "ffi/v2_42"]
v2_44 = ["v2_42", "ffi/v2_44"]
v2_46 = ["v2_44", "ffi/v2_46"]
v2_48 = ["v2_46", "ffi/v2_48"]
v2_50 = ["v2_48", "ffi/v2_50"]
v2_52 = ["v2_50", "ffi/v2_52"]
v2_54 = ["v2_52", "ffi/v2_54"]
v2_56 = ["v2_54", "ffi/v2_56"]
v2_58 = ["v2_56", "ffi/v2_58"]
v2_60 = ["v2_58", "ffi/v2_60"]
v2_62 = ["v2_60", "ffi/v2_62"]
v2_66 = ["v2_62", "ffi/v2_66"]
v2_68 = ["v2_66", "ffi/v2_68"]
v2_70 = ["v2_68", "ffi/v2_70"]

